--- a/styles.css
+++ b/styles.css
@@ -1,27 +1,28 @@
 body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-color: black;
 }
 
 .calc-body{
-    display: flex;
     position: absolute;
-    margin-bottom: 100px;
     bottom: 0;
-    left: 0;
+    margin-bottom: 40px;
+    justify-content: center;
+    align-items: center;
 }
 
 .row {
-    display:flex;
-    margin:auto;
     gap: 10px;
+    display: flex;
     justify-content: center;
-    width: 600px;
-
+    align-items: center;
 }
 
 button {
     border-radius: 50%;
-    height: 90px;
-    width: 90px;
+    height: 100px;
+    width: 100px;
     font-size: 30px;
 }
