--- a/styles.css
+++ b/styles.css
@@ -56,6 +56,11 @@ button {
     color: orange;
 }
 
+.selected {
+    background-color: white;
+    color: orange;
+}
+
 #zero {
     width: 200px;
     border-radius: 45%;
